# Teensy35

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_DESCRIPTION.md  README.md  RUSEFI_2025_UPDATES.md  TUNERSTUDIO_IMPLEMENTED.md  TUNERSTUDIO_INTEGRATION.md
docs/: GETTING_STARTED.md  IMPLEMENTATION_PLAN_COMPLETE.md  INJECTION_MODES.md  INTEGRATION_GUIDE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_HARDWARE_TIMER_PROGRESS.md  PHASE3_COMPLETE_SUMMARY.md  PHASE4_WEEK1_SUMMARY.md  RUSEFI_100_PERCENT_ROADMAP.md  RUSEFI_COMPATIBILITY.md  RUSEFI_COMPATIBILITY_ANALYSIS.md  RUSEFI_IMPLEMENTATION_SUMMARY.md  RUSEFI_ORIGINAL_ALGORITHMS.md  TESTING.md  TRIGGER_DECODER_PLAN.md
firmware/: CMakeLists.txt  Makefile.simple  README.md  mk64fx512.ld
firmware/src/: main.cpp  startup_mk64fx512.c
firmware/src/board/: board_pins.h
firmware/src/communication/tunerstudio/: tunerstudio.c  tunerstudio.h
firmware/src/config/: config.c  config.h
firmware/src/controllers/: engine_control.c  engine_control.h  engine_controller.c  engine_controller.h  event_scheduler.c  event_scheduler.h  multi_stage_scheduler.c  multi_stage_scheduler.h  rpm_calculator.c  rpm_calculator.h  rpm_calculator_phase3.c  trigger_diagnostics.c  trigger_diagnostics.h  wideband_k64.c  wideband_k64.h  wideband_k64_simple.c
firmware/src/fatfs/: fatfs_k64.c  fatfs_k64.h  fatfs_k64_simple.c  fatfs_wrapper.c  fatfs_wrapper.h  ffconf_k64.h
firmware/src/hal/: adc_k64.c  adc_k64.h  aux_outputs.h  cam_sync_k64.c  cam_sync_k64.h  can_k64.c  can_k64.h  clock_k64.c  clock_k64.h  gpio_k64.c  gpio_k64.h  hardware_scheduler_k64.c  hardware_scheduler_k64.h  ignition_control.c  ignition_control.h  injector_control.c  injector_control.h  input_capture_k64.c  input_capture_k64.h  input_capture_k64_simple.c  pit_k64.c  pit_k64.h  pwm_k64.c  pwm_k64.h  sensor_adc.c  sensor_adc.h  sensor_calibration.c  sensor_calibration.h  sensor_integration.c  sensor_integration.h  sim_k64.h  spi_k64.c  spi_k64.h  trigger_decoder_k64.c  trigger_decoder_k64.h  uart_k64.c  uart_k64.h  vvt_tracker_k64.c  vvt_tracker_k64.h
hardware/pinout/: teensy35_ecu_pinout.md
